--- a/codefest/src/App/App.css
+++ b/codefest/src/App/App.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
 
 }
-.container{
+.global{
     width: 100%;
     height: 100%;
-    padding: 5% 7% 5% 7%;
-
+    display: flex;
+    padding: 5%;
+    box-sizing: border-box;
 }
