--- a/codefest/src/components/Reccomend/Rec.css
+++ b/codefest/src/components/Reccomend/Rec.css
@@ -1,6 +1,6 @@
 .Rec{
     width: 100%;
-    background-color: red;
+    background-color: rgb(249, 244, 244);
     margin-top: 5%;
     height: auto;
     height: auto;
